# Benchmarking-Food-Allergens-Prediction-Performance-for-Android-On-Device-using-Small-Language-Model

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/edu/utem/ftmk/slm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: foodpreprocessed.xlsx
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/edu/utem/ftmk/slm/: DashboardActivity.kt  EnhancedDashboardActivity.kt  ExcelExporter.kt  FoodItem.kt  InferenceMetrics.kt  MainActivity.kt  MemoryReader.kt  MetricsCalculator.kt  ModelComparisonAdapter.kt  ModelConfig.kt  ModelStatistics.kt  PredictionHistoryActivity.kt  PredictionHistoryAdapter.kt  PredictionResult.kt  ResultsAdapter.kt
app/src/main/java/edu/utem/ftmk/slm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: bg_badge_danger.xml  bg_badge_gold.xml  bg_gradient_purple.xml  bg_rank_circle.xml  bg_rounded_light_blue.xml  bg_rounded_light_orange.xml  bg_rounded_light_purple.xml  bg_search.xml  card_background.xml
app/src/main/res/layout/: activity_dashboard.xml  activity_enhanced_dashboard.xml  activity_main.xml  activity_prediction_history.xml  item_model_comparison.xml  item_prediction_history.xml  item_result.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/edu/utem/ftmk/slm/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
